Agentic Page RAG code added

--- a/page_rag.ipynb
+++ b/page_rag.ipynb
@@ -28,6 +28,7 @@
     "load_dotenv()\n",
     "\n",
     "import hashlib\n",
+    "import os\n",
     "from pathlib import Path\n",
     "\n",
     "from langchain_chroma import Chroma\n",
@@ -97,24 +98,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "81dc6616",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\"\"\"\n",
-    "    Extract metadata from filename.\n",
-    "\n",
-    "    Expected format: {company} {doc_type} {quarter} {year}.pdf\n",
-    "    Examples:\n",
-    "    - amazon 10k 2024.pdf\n",
-    "\n",
-    "\n",
-    "    Returns:\n",
-    "        dict with company_name, doc_type, fiscal_year, fiscal_quarter\n",
-    "\"\"\"\n",
-    "\n",
+    "# Cell 4: Metadata Extraction\n",
     "def extract_metadata_from_filename(filename: str) -> dict:\n",
+    "    \"\"\"\n",
+    "        Extract metadata from filename.\n",
+    "\n",
+    "        Expected format: {company} {doc_type} {quarter} {year}.pdf\n",
+    "        Examples:\n",
+    "        - amazon 10k 2024.pdf\n",
+    "\n",
+    "\n",
+    "        Returns:\n",
+    "            dict with company_name, doc_type, fiscal_year, fiscal_quarter\n",
+    "    \"\"\"\n",
+    "\n",
     "    name = filename.replace('.pdf', '')\n",
     "\n",
     "    parts = name.split()\n",
@@ -168,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "04729b4a",
    "metadata": {},
    "outputs": [],
